--- a/css/review.css
+++ b/css/review.css
@@ -1,31 +1,61 @@
+.review__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.review__wrapper {
+    width: 980px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 20px;
+}
 .review__img {
-    padding-left: 100px;
-}
-
-.review__img_photo {
-    margin-bottom: 11px;
-}
-
-.review_text {
-    width: 680px;
-    display: inline-block;
-    position: relative;
-    vertical-align: top;
-    padding-top: 52px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 28px;
-    margin-left: 20px;
-}
-
-.review__caption {
+    background: radial-gradient(50.00% 50.00% at 50% 50%,
+    rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%), url("../img/icons-png/review_max.png");
+    border-radius: 140px;
     width: 280px;
+    height: 280px;
+    margin-bottom: 11px;
+    
+}
+.img__oksana {
+    background: radial-gradient(50.00% 50.00% at 50% 50%,
+    rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%), url("../img/icons-png/review_oksana.png");
+    border-radius: 140px;
+    width: 280px;
+    height: 280px;
+}
+.img__nikita {
+    background: radial-gradient(50.00% 50.00% at 50% 50%,
+    rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%), url("../img/icons-png/review_nikita.png");
+    border-radius: 140px;
+    width: 280px;
+    height: 280px;
+}
+
+.review__author {
+    width: 280px;
+    text-align: center;
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
-    text-align: center;
+    
+}
+.text__description {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    padding-top: 52px;
 }
 
-.review__list li:not(:last-child) {
+.review__text {
+    width: 680px;
+}
+
+.review__wrapper:not(:last-child) {
     margin-bottom: 50px;
 }
+
+
+
