--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,7 @@
     top: -12px;
     left: 0;
     content: "\201c";
-    color: #6C0287;
+    color:  var(--main-menu-bg);
     font-weight: 900;
     font-size: 44px;
     line-height: 50px;
@@ -46,7 +46,7 @@
 
 .quote:after {
     content: "\201d";
-    color: #6C0287;
+    color: var(--main-menu-bg);
     font-weight: 900;
     font-size: 44px;
     line-height: 50px;
