--- a/css/faq.css
+++ b/css/faq.css
@@ -1,5 +1,5 @@
 .question {
-    background-color: #fff;
+    background-color: var(--main-color);
     color: #1C1A1A;
     font-size: 24px;
     font-weight: 700;
@@ -10,7 +10,7 @@
 
 .faq__questions :nth-child(even) {
     color: white;
-    background-color:  #440F51;
+    background-color:  var(--main-purple);
     content: "";
     display: block;
     background-size: 4%;
