--- a/css/banner.css
+++ b/css/banner.css
@@ -117,16 +117,19 @@
     bottom: 90px;
     left: 50%;
     transform: translate(-50%, 0);
-    z-index: 9999;
+    z-index: 11;
+    opacity: 0.6;
 }
 
+
 .banner__arrow-link:hover {
-    background-image: url("../img/icons-png/arrow-white.png");
-    transition: 0.3s ease;
+    content: url("../img/icons-png/arrow-white.png");
+    transition: 0.3s ease-in-out 0.1s;
+    opacity: 1;
 }
 
 .banner__arrow-link:active {
-    background-image: url("../img/icons-png/arrow-purple.png");
+    content: url("../img/icons-png/arrow-purple.png");
 }
 
 .banner__arrow-link:focus {
