--- a/css/entertainments.css
+++ b/css/entertainments.css
@@ -79,7 +79,7 @@
 
 .entertainments--list__item:hover {
     transform: scale(1.1);
-    transition-duration: 0.2s;
+    transition: 0.5s ease;
 }
 
 
