--- a/css/faq.css
+++ b/css/faq.css
@@ -72,9 +72,7 @@
         line-height: 24px;
         margin-bottom: 16px;
     }
-    .container__faq {
-        width: 904px;
-    }
+    
     .faq__questions :nth-child(even) {
         content: "";
         background-image: url("../img/icons-svg/circle-purple.svg") ;
@@ -84,4 +82,60 @@
         background-color:  white;
         color: rgb(28, 26, 26);
 }
+.quastions-five {
+    display: none;
+}
+}
+@media (max-width:768px)  {
+    .section__faq_title {
+        font-size: 24px;
+        line-height: 26px;
+        margin-bottom: 30px;
+    }
+    .question  {
+        width: 688px;
+        height: 70px;
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 16px;
+    }
+    .faq {
+        padding-bottom: 35px;
+    }
+}
+@media (max-width:320px) {
+    .section__faq_title {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 18px;
+        margin-bottom: 15px;
+    }
+    .question  {
+        width: 280px;
+        height: 46px;
+        font-size: 12px;
+        line-height: 16px;
+        margin-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 43px;
+        align-self: center;
+    }
+    .quastions-first, .quastions-second {
+        padding-bottom: 7px;
+        padding-top: 7px;
+    }
+    .quastions-third, .quastions-fourth {
+        padding-bottom: 15px;
+        padding-top: 15px;
+    }
+    
+    .faq {
+        padding-bottom: 15px;
+    }
+    .faq__questions :nth-child(even) {
+        background-size: 30px;
+    }
+    .faq__questions :nth-child(odd) {
+        background-size: 30px;
+    }
 }
