--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,7 @@
 @import url(review.css);
 @import url(header.css);
 @import url(entertainments.css);
+@import url(80s-hall.css);
+@import url(star-wars-hall.css);
+@import url(wild-west-hall.css);
+@import url(neon-hall.css);
