--- a/css/about.css
+++ b/css/about.css
@@ -80,11 +80,12 @@
 #about {
     padding-top: 50px;
 }
+.about__image-small, .about__image-down {
+    display: none;
+}
 
 @media (max-width:1024px)  {
-    .container {
-        width: 904px;
-    }
+    
     .section__title_about {
         margin-bottom: 26px;
         font-size: 30px;
@@ -140,5 +141,143 @@
     }
     #about {
         padding-top: 70px;
+    }
+}
+
+@media (max-width:768px) {
+    .section__title_about {
+        margin-bottom: 30px;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 36px;
+    }
+    .about__image-small {
+        display: block;
+        width: 381px;
+        height: 378px;
+        float: left;
+        margin-right: 28px;
+        overflow: hidden;
+    }
+    .about__image {
+        display: none;
+    }
+    .about__description {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        width: 278px;
+        display: inline-block;
+        margin-bottom: 108px;
+    }
+    .about__description-first {
+        padding-top: 66px;
+    }
+    .about__description:nth-child(2) {
+        margin-bottom: 20px;
+        
+    }
+    
+    .about__wrapper {
+        column-gap: 28px;
+    }
+    
+    .about__blockquote {
+        margin-bottom: 13px;
+    }
+    .quote {
+        font-size: 32px;
+        line-height: 36px;
+        padding-left: 21px;
+        padding-bottom: 16px;
+        padding-right: 0;
+    }
+    .about__wrapper {
+        display: block;
+    }
+    .owner {
+        column-gap: 25px;
+    }
+    .owner__description {
+        width: 225px;
+        height: 78px;
+    }
+    .owner__description__uppercase {
+        font-size: 18px;
+    }
+}
+@media (max-width:320px) {
+    .section__title_about {
+        margin-bottom: 15px;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 18px;
+    }
+    .about__image-small {
+        display: none;
+    }
+    .about__image-down {
+        display: block;
+    }
+    .about__description {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+        margin-bottom: 15px;
+        width: 280px;
+    }
+    .about__description-first {
+        padding-top: 0;
+    }
+    .about__description:nth-child(2) {
+        margin-bottom: 20px;
+        
+    }
+    .about__image-down {
+        width: 280px;
+        height: 280px;
+        padding-bottom: 21px;
+    }
+    .quote {
+        font-size: 18px;
+        
+        line-height: 26px;
+        letter-spacing: 1px;
+        padding-bottom: 9px;
+        padding-right: 0;
+        padding-left: 11px;
+        width: 280px;
+        
+    }
+    .quote:before {
+        font-size: 22px;
+        font-weight: 900;
+        letter-spacing: 1px;
+    }
+    .quote:after {
+        position: absolute;
+        font-size: 22px;
+        font-weight: 900;
+        letter-spacing: 1px;
+        top: 48px;
+        right: 109px;
+    }
+    .owner__avatar {
+        width: 56px;
+        height: 56px;
+    }
+    .owner {
+        column-gap: 11px;
+        width: 280px;
+        height: 56px;
+    }
+    
+    .owner__description {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+    }
+    .owner__description__uppercase {
+        font-size: 12px;
     }
 }
