--- a/css/banner.css
+++ b/css/banner.css
@@ -281,3 +281,71 @@
     padding-bottom: 40px;
 }
 }
+@media (max-width:320px)  {
+    .banner-container {
+        height: 204px;
+    }
+    .banner-info__title {
+        font-size: 35px;
+        font-weight: 900;
+        line-height: 100%;
+        letter-spacing: -3px;
+        margin-bottom: 6px;
+        width: 212px;
+    }
+    .banner-container:after {
+        width: 161px;
+        height: 179px;
+        bottom: 0;
+        right: 0;
+    }
+    .banner-info__subtitle {
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0%;
+        margin-bottom: 10px;
+        text-align: start;
+        padding-left: 20px;
+    }
+    .banner-column__text {
+        font-size: 26px;
+        font-weight: 900;
+        line-height: 37px;
+    }
+    .banner-column-next__text {
+        font-size: 22px;
+        font-weight: 900;
+        line-height: 31px;
+    }
+    .banner-column__text-add, .banner-column-next__text-add  {
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 11px;
+        width: 65px;
+    }
+    .banner__button {
+        width: 117px;
+        height: 27px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 12px;
+        padding-top: 8px; 
+        border-radius: 4px;
+    }
+    .banner__list {
+        margin-bottom: 30px;
+        width: 180px;
+        height: 59px;
+    }
+    .banner__list-column {
+        width: 65px;
+        height: 59px;
+    }
+    .banner__list-column-next {
+        padding-top: 6px;
+    }
+    .banner-section {
+        padding-top: 20px;
+    }
+}
