--- a/css/global.css
+++ b/css/global.css
@@ -132,4 +132,21 @@ address {
     .container-max {
         max-width: 768px;
     }
+    .section {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+@media (max-width:320px) {
+    .container {
+        max-width: 288px;
+    }
+    
+    .container-max {
+        max-width: 320px;
+    }
+    .section {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
