--- a/css/halls.css
+++ b/css/halls.css
@@ -60,6 +60,9 @@
 #halls div {
     justify-content: center;
 }
+.halls {
+    padding-bottom: 100px;
+}
 
 @media (max-width:1024px) {
     .section__halls_title {
@@ -116,7 +119,7 @@
 }
 @media (max-width:320px) {
     .halls {
-        padding-top: 30px;
+        padding-top: 15px;
     }
     .section__halls_title {
         font-size: 14px;
