--- a/css/neon-hall.css
+++ b/css/neon-hall.css
@@ -178,11 +178,12 @@
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 66px;
-        left: 50px;
+        top: 58px;
+        left: 58px;
     }
     .banner80 {
         padding-top: 50px;
+        padding-bottom: 20px;
     }
     .banner80__banner {
         margin-bottom: 70px;
@@ -259,7 +260,7 @@
     }
     .banner80 {
         padding-top: 40px;
-        padding-bottom: 60px;
+        padding-bottom: 30px;
     }
     .banner80__banner {
         margin-bottom: 60px;
@@ -270,6 +271,7 @@
     }
     .about80 {
         padding-bottom: 60px;
+        padding-top: 30px;
     }
     .about80__title {
         font-size: 24px;
@@ -286,13 +288,13 @@
     width: 313px;
     }
     .text-first {
-        padding-top: 72px;
+        padding-top: 52px;
     }
     .about80__text {
         font-size: 16px;
     }
     .about80__description {
-        height: 326px;
+        height: 340px;
     }
     .other-halls__title {
         font-size: 24px;
@@ -342,16 +344,17 @@
     }
     .banner80 {
         padding-top: 20px;
-        padding-bottom: 30px;
+        padding-bottom: 15px;
     }
     .banner80__banner {
-        margin-bottom: 60px;
+        margin-bottom: 30px;
     }
     .banner80__description {
         font-size: 16px;
         width: 280px;
     }
     .about80 {
+        padding-top: 15px;
         padding-bottom: 30px;
     }
     .about80__title {
@@ -406,5 +409,9 @@
 .header__logo {
     margin-right: 0;
     
+}
+.logo__image {
+    width: 66px;
+    height: 42px;
 }
 }
